# agent-seo

./: .gitignore  Dockerfile  README.md  agentproof.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: cron-scoring.yml
examples/: context7.json  context7_v05.json  gitmcp_react_v04.json  leaderboard_v04.json  leaderboard_v05.json
results/: web3-signals-api-production.up.railway.app_20260415_005845.json
src/agent_seo/: __init__.py  batch_scorer.py  cli.py  db.py  mcp_client.py  mcp_server.py  models.py  scanner.py  server.py  sourcer.py
src/agent_seo/checks/: mcp.py
src/agent_seo/output/: terminal.py
src/agent_seo/static/: index.html
